Add task to check roles in ENV .IDFGISU1 and list files in /var/tmp

--- a/init-state-file.yaml
+++ b/init-state-file.yaml
@@ -26,3 +26,8 @@
                 "standby_db_IDFGISU1": "",
                 "primary_db_IDFGISU1": ""
               }
+        
+        - name: Cek role di ENV .IDFGISU1
+          shell: |
+            ls -al /var/tmp/
+          ignore_errors: yes
